--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "toxin",
   "version": "1.0.0",
   "description": "Learn web environment",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/alsepir/TOXIN/issues"
   },
-  "homepage": "https://github.com/alsepir/TOXIN#readme"
+  "homepage": "https://github.com/alsepir/TOXIN#readme",
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  }
 }
