--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.1",
     "html-webpack-plugin": "^3.2.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
