--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^8.0.1",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
